cli/internal/envoy/testdata/input_lua_inline.yaml
# Copyright Built On Envoy
# SPDX-License-Identifier: Apache-2.0
# The full text of the Apache license is available in the LICENSE file at
# the root of the repo.

name: test-extension
version: 1.0.0
categories:
  - Security
author: Test Author
description: A test extension
longDescription: |
  This is a longer description of the test extension.
type: lua
lua:
  inline: |
    function envoy_on_request(request_handle)
      request_handle:logInfo("Hello, World!")
    end
tags:
  - test
license: Apache-2.0
examples:
  - title: Basic usage
    description: Run the extension
    code: |
      boe run --plugin test-extension
